Configuracion del panel de admin

--- a/neoteca/templates/base.html
+++ b/neoteca/templates/base.html
@@ -97,6 +97,12 @@
                             <span>Gestionar Libros</span>
                         </a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/admin_django/" target="_blank">
+                            <i class="fas fa-fw fa-cogs"></i>
+                            <span>Admin Avanzado</span>
+                        </a>
+                    </li>
                 {% endif %}
 
             {% else %}
