--- a/neoteca/templates/login.html
+++ b/neoteca/templates/login.html
@@ -54,7 +54,12 @@
 
                         {% if messages %}
                             {% for message in messages %}
-                                <div class="alert alert-danger">{{ message }}</div>
+                                <div class="alert alert-{% if message.tags == 'error' %}danger{% else %}success{% endif %} alert-dismissible fade show" role="alert">
+                                    <i class="fas fa-info-circle"></i> {{ message }}
+                                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                        <span aria-hidden="true">&times;</span>
+                                    </button>
+                                </div>
                             {% endfor %}
                         {% endif %}
 
