--- a/neoteca/templates/subir_libro.html
+++ b/neoteca/templates/subir_libro.html
@@ -63,6 +63,17 @@
 
             <div class="row">
                 <div class="col-md-6 mb-3">
+                    <label class="font-weight-bold text-success">
+                        <i class="fas fa-image"></i> Portada del Libro:
+                    </label>
+                    {{ form.portada }}
+                    {% if form.instance.portada %}
+                        <div class="mt-2">
+                            <img src="{{ form.instance.portada.url }}" style="height: 100px; border-radius: 5px;">
+                        </div>
+                    {% endif %}
+                </div>
+                <div class="col-md-6 mb-3">
                     <label class="font-weight-bold">Archivo PDF:</label>
                     {{ form.archivo_pdf }}
                     
